[package]
name = "rust-stego"
version = "0.1.0"
edition = "2024"

[dependencies]
# oh boy how long could the dependencies possibly be?
tempfile = "3.13.0"
rayon = "1.10.0"
hound = "3.5.1"
clap = { version = "4.5.45", features = ["derive"] }
image = "0.25.5" # and there goes compile speed :(
png = "0.17.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
incremental = true

[profile.dev]
incremental = true